--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.4.0",
     "gatsby-plugin-google-analytics": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
@@ -24,12 +28,18 @@
     "gatsby-plugin-sharp": "^4.4.0",
     "gatsby-plugin-sitemap": "^5.4.0",
     "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-source-fontawesome": "0.0.1",
+    "gatsby-source-graphql": "^4.4.0",
     "gatsby-source-wordpress": "^6.4.0",
     "gatsby-transformer-remark": "^5.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.4",
+    "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.45.0"
+    "react-multi-carousel": "^2.6.5",
+    "sass": "^1.45.0",
+    "sharp": "^0.29.3"
   }
 }
