--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.6.5",
+    "react-slick": "^0.28.1",
     "sass": "^1.45.0",
     "sharp": "^0.29.3"
   }
