--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.3.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "emailjs-com": "^3.2.0",
     "gatsby": "^4.4.0",
     "gatsby-plugin-google-analytics": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
@@ -39,6 +41,7 @@
     "react-bootstrap": "^2.0.4",
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.6.5",
     "react-slick": "^0.28.1",
