configaration change with contact page

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-WORDPRESS_URL=https://wp.patentpc.com/graphql
-CAPTCHA_SITE_KEY=6Lc-ft4dAAAAAF4VyqkjgwphrQivO59Nspi9byCT 
+WORDPRESS_URL=https://wp.patentpc.com/graphql;
+CAPTCHA_URL=6Lfchd8dAAAAABWXYN_T7yKLBf_eekh-bBRposG5;
