--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
     "gatsby": "^4.4.0",
     "gatsby-plugin-google-analytics": "^4.4.0",
