contact form connect with email

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
-WORDPRESS_URL=https://wp.patentpc.com/graphql;
-CAPTCHA_URL=6Lfchd8dAAAAABWXYN_T7yKLBf_eekh-bBRposG5;
+WORDPRESS_URL=https://wp.patentpc.com/graphql
+CAPTCHA_URL=6Lcdwd8dAAAAAD2LDojRmNzjqtjyB-7mEKdLWxHk
+serviceId=service_kxcybmy
+templateId=template_unl3mif
+userId=user_zBTH4MMXVd61RJQjY4za1
