Add CTA; Disclaimer

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 WORDPRESS_URL=https://wp.patentpc.com/graphql
+SITE_URL=https://www.patentpc.com
 serviceId=service_kxcybmy
 templateId=template_unl3mif
 userId=user_zBTH4MMXVd61RJQjY4za1
