--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "gatsby build",
+    "build": "gatsby clean && gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
@@ -40,12 +40,14 @@
     "gatsby-source-wordpress": "^6.4.0",
     "gatsby-transformer-remark": "^5.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
+    "html-react-parser": "^1.4.5",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.4",
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-html-parser": "^2.0.2",
     "react-multi-carousel": "^2.6.5",
     "react-slick": "^0.28.1",
     "sass": "^1.45.0",
